<resources>
    <string name="app_name">Cactaria</string>
    <string name="dashboard_brand_name">Cactaria</string>
    <string name="dashboard_welcome">Welcome to Cactaria: Your Plant Nursery!</string>
    <string name="search_hint">Search</string>
    <string name="btn_all">All</string>
    <string name="btn_succulent">Succulent</string>
    <string name="btn_cactus">Cactus</string>
    <string name="bunnyear_name">Bunny Ear</string>
    <string name="ordernow">Order Now</string>
    <string name="continue_btn">Continue</string>
    <string name="moon_cactus_name">Moon Cactus</string>
    <string name="echeveria_name">Echeveria elegans</string>
    <string name="Fasciated">Fasciated haworthia</string>
    <string name="bunnyear_description">The Bunny Ear Cactus, scientifically known as Opuntia\nmicrodasys, is a delightful succulent recognized for its flat,\npaddle-shaped stems resembling rabbit ears. Its\nlow-maintenance nature and sunny disposition make it  an\nideal addition to any plant collection.</string>
    <string name="bunny_qty">Quantity</string>
    <string name="bunny_plant_name">Bunny Ear cactus Plant</string>
    <string name="bunny_qty_plus">+</string>
    <string name="bunny_qty_minus">-</string>
    <string name="bunny_qunty">2</string>
    <string name="price_bunny">Rs.750.00</string>
    <string name="cus_btn_bunny">Customize</string>
    <string name="bunny_cus">Customize</string>
    <string name="username">Samantha Weerasinghe</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="userEmail">samantha@gmail.com</string>
    <string name="phone">Phone Number</string>
    <string name="usernumber">077-1234567</string>
    <string name="address">Address</string>
    <string name="useraddress">123 Maple Street Springfield, Anytown State, 12345 United States</string>
    <string name="profile_back_btn">Back</string>
    <string name="profile_logout_btn">Log Out</string>
    <string name="bunnyprice">Rs.750.00</string>
    <string name="mooncactusname">Moon Cactus</string>
    <string name="moonqty">1</string>
    <string name="moonprice">Rs.500.00</string>
    <string name="profile">Profile</string>
    <string name="mooncactus_desc">The Moon Cactus, scientifically called\nGymnocalycium mihanovichii, is a colorful and compact cactus\nknown for its vibrant hues and lack of chlorophyll. It typically\nfeatures a bright, round top graft that sits atop a green base.\nEasy to care for and eye-catching, it\'s a popular choice for\nindoor gardens.</string>
    <string name="ordernowname">Order Now</string>
    <string name="carddetails">Card Details</string>
    <string name="crdnumber">Your Card Number</string>
    <string name="crdnum">**** **** **** ****</string>
    <string name="expdate">Expiry Date</string>
    <string name="crdmnth">Month</string>
    <string name="crdyear">Year</string>
    <string name="orderdetails">Order Details</string>
    <string name="name1">"   Name"</string>
</resources>