<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Booknow"
    android:background="@drawable/gradientbg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anton"
            android:text="@string/orderdetails"
            android:textAlignment="center"
            android:textColor="@color/cactaria"
            android:textSize="48sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/cactaria_color"
            app:cardCornerRadius="20dp">

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/cactaria_color"
            app:cardCornerRadius="20dp">

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="text" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/cactaria_color"
            app:cardCornerRadius="20dp">

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="text" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="214dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="15dp"
            app:cardBackgroundColor="@color/cactaria_color"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/carddetails" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/crdnumber" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="70dp"
                android:ems="10"
                android:hint="@string/crdnum"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="120dp"
                android:text="@string/expdate" />

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="150dp"
                android:ems="10"
                android:hint="@string/crdmnth"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextText4"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="150dp"
                android:ems="10"
                android:hint="@string/crdyear"
                android:inputType="text" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/cactaria"
            android:text="@string/ordernow"
            android:textSize="24sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>