<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BunnyEar"
    android:background="@drawable/gradientbg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="100dp"
            android:fontFamily="@font/anton"
            android:text="@string/bunnyear_name"
            android:textColor="@color/cactaria"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/bunnyeardesc"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:srcCompat="@mipmap/bunny_earr_foreground" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/anton"
            android:text="@string/bunny_plant_name"
            android:textColor="@color/cactaria" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/didact_gothic"
            android:text="@string/bunnyear_description"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="10dp"
            android:text="@string/bunny_qty"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="220dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/cactaria_color"
                android:text="@string/bunny_qty_plus" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bunny_qunty"
                android:textAlignment="center"
                android:textIsSelectable="false"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/cactaria_color"
                android:text="@string/bunny_qty_minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bunnyprice"
                android:layout_width="49dp"
                android:layout_height="55dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@color/cactaria_color"
                android:fontFamily="@font/anton"
                android:text="@string/bunnyprice"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:layout_marginLeft="70dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cactaria"
                android:text="@string/ordernow"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>