<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboard_Screen1">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dashboard_Brandname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/anton"
                android:text="@string/app_name"
                android:textColor="@color/cactaria"
                android:textSize="45sp" />

            <ImageButton
                android:id="@+id/userpr"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/user_round" />

        </LinearLayout>

        <TextView
            android:id="@+id/dashboard_welcome"
            android:layout_width="355dp"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/dashboard_welcome"
            android:textSize="17sp"
            android:textStyle="bold" />

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/all_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cactaria"
                android:text="@string/btn_all" />

            <Button
                android:id="@+id/cactus_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cactaria_color"
                android:text="@string/btn_cactus" />

            <Button
                android:id="@+id/succulent_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/cactaria_color"
                android:text="@string/btn_succulent" />
        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="560dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    app:cardBackgroundColor="@color/cactaria_color"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="12dp">

                    <Button
                        android:id="@+id/moon_cactus_ordernow_btn"
                        android:layout_width="169dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="200dp"
                        android:layout_marginTop="100dp"
                        android:backgroundTint="@color/cactaria"
                        android:text="@string/ordernow"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/moon_cactus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="150dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/moon_cactus_name"
                        android:textSize="34sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img_moon_cactus"
                        android:layout_width="138dp"
                        android:layout_height="145dp"
                        app:srcCompat="@mipmap/moon_cactus_foreground" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="386dp"
                    android:layout_height="158dp"
                    android:layout_margin="12dp"
                    app:cardBackgroundColor="@color/cactaria_color"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="12dp">

                    <Button
                        android:id="@+id/bunnyear_ordernow_btn"
                        android:layout_width="169dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="200dp"
                        android:layout_marginTop="100dp"
                        android:backgroundTint="@color/cactaria"
                        android:text="@string/ordernow"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/bunny_ear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="150dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/bunnyear_name"
                        android:textSize="34sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img_bunny_ear"
                        android:layout_width="139dp"
                        android:layout_height="match_parent"
                        app:srcCompat="@mipmap/bunny_earr_foreground" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    app:cardBackgroundColor="@color/cactaria_color"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="12dp">

                    <Button
                        android:id="@+id/echeveria_ordernow_btn"
                        android:layout_width="169dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="200dp"
                        android:layout_marginTop="100dp"
                        android:backgroundTint="@color/cactaria"
                        android:text="@string/ordernow"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="150dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/echeveria_name"
                        android:textSize="34sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img_echeveria"
                        android:layout_width="141dp"
                        android:layout_height="137dp"
                        app:srcCompat="@mipmap/echeveria_foreground" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="386dp"
                    android:layout_height="158dp"
                    android:layout_margin="12dp"
                    app:cardBackgroundColor="@color/cactaria_color"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="12dp">

                    <Button
                        android:id="@+id/Fasciated_ordernow_btn"
                        android:layout_width="169dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="200dp"
                        android:layout_marginTop="100dp"
                        android:backgroundTint="@color/cactaria"
                        android:text="@string/ordernow"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/Fasciated_haworthia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="150dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Fasciated"
                        android:textSize="34sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView17"
                        android:layout_width="132dp"
                        android:layout_height="158dp"
                        app:srcCompat="@mipmap/fasciated_foreground" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>